# Proyecto-3-progra-2

./: .gitignore  CMakeLists.txt  Makefile  README.md  callgrind.out.1519  callgrind.out.1520  callgrind.out.1595  callgrind.out.5289  callgrind.out.5301  camera.h  gpu.h  hittable.h  hittable_list.h  image.ppm  main.cu  material.h  output  ray.h  rtweekend.h  sphere.h  vec3.h
include/: app.hh  box3.hh  camera.hh  color.hh  hittable.hh  hittable_list.hh  material.hh  ray.hh  rtweekend.hh  sphere.hh  vec3.hh
src/: CMakeLists.txt  app.cc  box3.cc  camera.cc  color.cc  hittable.cc  hittable_list.cc  main.cc  material.cc  ray.cc  sphere.cc  vec3.cc
tests/: CMakeLists.txt  app_test.cc  camera_test.cc  color_test.cc  hittable_list_test.cc  hittable_test.cc  material_test.cc  ray_test.cc  rtweekend_test.cc  sphere_test.cc  vec3_test.cc
